# my_blog_2

./: db.sqlite3  main.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_telephone_number.py
config/: settings.py  urls.py
pages/: urls.py
static/: home.css
templates/: base.html  home.html
templates/registration/: login.html  password_change_form.html  signup.html
