[project]
name = "myblog-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "django-crispy-forms>=2.6",
    "gunicorn>=25.3.0",
    "whitenoise>=6.12.0",
]
